--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,7 +14,7 @@ db.user=dev
 db.password=ax2
 
 # Name of your development database
-db.database=exam_3sem
+db.database=exam_3sem_test
 
 
 # Name of your test-database
